--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory( utilities )
 add_subdirectory( app )
 add_subdirectory( plugins )
 add_subdirectory( wallet )
+add_subdirectory( crosschain )
