--- a/libraries/crosschain/CMakeLists.txt
+++ b/libraries/crosschain/CMakeLists.txt
@@ -11,6 +11,7 @@ file(GLOB HEADERS "include/*.hpp")
 
 set(sources
    crosschain.cpp
+   crosschain_interface_emu.cpp
    ${HEADERS})
 
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/git_revision.cpp.in" "${CMAKE_CURRENT_BINARY_DIR}/git_revision.cpp" @ONLY)
