--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory( plugins )
 add_subdirectory( wallet )
 add_subdirectory( crosschain )
 add_subdirectory( uvm )
+add_subdirectory( jsondiff )
