--- a/libraries/net/CMakeLists.txt
+++ b/libraries/net/CMakeLists.txt
@@ -15,6 +15,7 @@ target_include_directories( graphene_net
   PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
   PRIVATE "${CMAKE_SOURCE_DIR}/libraries/chain/include"
   PRIVATE "${CMAKE_SOURCE_DIR}/libraries/uvm/include"
+  PRIVATE "${CMAKE_SOURCE_DIR}/libraries/jsondiff/jsondiff-cpp/include"
   PRIVATE "${CMAKE_SOURCE_DIR}/libraries/crosschain/include"
 )
 
