--- a/libraries/crosschain/CMakeLists.txt
+++ b/libraries/crosschain/CMakeLists.txt
@@ -13,6 +13,7 @@ set(sources
    crosschain.cpp
    crosschain_interface_emu.cpp
    crosschain_interface_btc.cpp
+   crosschain_interface_ltc.cpp
    crosschain_transaction_record_plugin.cpp
    ${HEADERS})
 
