temp milestone version 1.0

--- a/libraries/privatekey_management/CMakeLists.txt
+++ b/libraries/privatekey_management/CMakeLists.txt
@@ -11,6 +11,7 @@ file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR} *.hpp *.h)
 
 set(sources
    private_key.cpp
+   database_privatekey.cpp
    ${HEADERS})
 
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/git_revision.cpp.in" "${CMAKE_CURRENT_BINARY_DIR}/git_revision.cpp" @ONLY)
