--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -65,6 +65,7 @@ add_library( graphene_chain
              get_config.cpp
 
              pts_address.cpp
+	     coldhot_transfer_evaluate.cpp
 
              evaluator.cpp
              balance_evaluator.cpp
@@ -72,6 +73,7 @@ add_library( graphene_chain
              assert_evaluator.cpp
              witness_evaluator.cpp
              committee_member_evaluator.cpp
+	     coldhot_withdraw.cpp
              asset_evaluator.cpp
              transfer_evaluator.cpp
              proposal_evaluator.cpp
