--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries( chain_test graphene_chain graphene_app graphene_account_h
 if(MSVC)
   set_source_files_properties( tests/serialization_tests.cpp PROPERTIES COMPILE_FLAGS "/bigobj" )
   set_source_files_properties( tests/authority_tests.cpp PROPERTIES COMPILE_FLAGS "/bigobj" )
+  set_source_files_properties( tests/operation_tests.cpp PROPERTIES COMPILE_FLAGS "/bigobj" )
   set_source_files_properties( app/main.cpp PROPERTIES COMPILE_FLAGS "/bigobj" )
 endif(MSVC)
 
