--- a/libraries/net/CMakeLists.txt
+++ b/libraries/net/CMakeLists.txt
@@ -17,6 +17,7 @@ target_include_directories( graphene_net
   PRIVATE "${CMAKE_SOURCE_DIR}/libraries/uvm/include"
   PRIVATE "${CMAKE_SOURCE_DIR}/libraries/jsondiff/jsondiff-cpp/include"
   PRIVATE "${CMAKE_SOURCE_DIR}/libraries/crosschain/include"
+  PRIVATE "${CMAKE_SOURCE_DIR}/libraries/crosschain_privatekey_management/include"
 )
 
 if(MSVC)
