--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -11,4 +11,4 @@ add_subdirectory( wallet )
 add_subdirectory( crosschain )
 add_subdirectory( uvm )
 add_subdirectory( jsondiff )
-add_subdirectory( privatekey_management )
+add_subdirectory( crosschain_privatekey_management )
