for Linux compile

--- a/libraries/crosschain_privatekey_management/CMakeLists.txt
+++ b/libraries/crosschain_privatekey_management/CMakeLists.txt
@@ -15,16 +15,17 @@ endif()
 
 # build library crosschain_privatekey_management
 message(STATUS "build library crosschain_privatekey_management")
-file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp   ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
+
+file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp   ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/secp256k1/include $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libbitcoin/include)
 message(STATUS "HEADERS: ${HEADERS}")
 
 set(sources
    private_key.cpp
    database_privatekey.cpp
    util.cpp
+   
    ${HEADERS}
    )
-
 
 set(BOOST_INCLUDE_DIR $ENV{BOOST_ROOT})
 #set(THIRD_LIB $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT})
@@ -34,7 +35,7 @@ add_library( crosschain_privatekey_management
              ${sources}
              ${HEADERS} )
 
-
+IF(WIN32)
 target_compile_definitions( crosschain_privatekey_management PUBLIC  
                             BC_STATIC
 							ENABLE_MODULE_RECOVERY
@@ -52,10 +53,28 @@ target_compile_definitions( crosschain_privatekey_management PUBLIC
 							WIN64
 							_WIN64   
 							)
+ELSE()
+target_compile_definitions( crosschain_privatekey_management PUBLIC  
+                            BC_STATIC
+                                                        ENABLE_MODULE_RECOVERY
+                                                        ENABLE_MODULE_ECDH
+                                                        USE_SCALAR_8X32
+                                                        USE_FIELD_10X26
+                                                        USE_ENDOMORPHISM
+                                                        USE_NUM_NONE
+                                                        USE_FIELD_INV_BUILTIN
+                                                        USE_SCALAR_INV_BUILTIN
+)
+ENDIF()
+IF(WIN32)
+
 target_link_libraries( crosschain_privatekey_management PUBLIC graphene_chain  $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libbitcoin/threadsafestatics.lib
                                                                 $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/third_libs/blocklink_libbitcoin_secp256k1.lib 
                                                                 $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/third_libs/blocklink_libbitcoin.lib
 															   )
+ELSE()
+	target_link_libraries( crosschain_privatekey_management PUBLIC graphene_chain $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a)
+ENDIF()
 target_include_directories( crosschain_privatekey_management
                             PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include  $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/secp256k1/include $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libbitcoin/include  
 							PRIVATE ${BOOST_INCLUDE_DIR}/)
@@ -64,13 +83,20 @@ target_include_directories( crosschain_privatekey_management
 
 
 add_executable( crosschain_privatekey_management_exe main.cpp )
+IF(WIN32)
 target_link_libraries(crosschain_privatekey_management_exe PRIVATE crosschain_privatekey_management ${Boost_LIBRARIES}
                                                             $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/third_libs/blocklink_libbitcoin_secp256k1.lib 
-                                                            $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/third_libs/blocklink_libbitcoin.lib 														    
-														   
-														   )
-target_include_directories(crosschain_privatekey_management_exe PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include  $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/secp256k1/include  $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libbitcoin/include PRIVATE ${BOOST_ROOT}/)
+                                                            $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/third_libs/blocklink_libbitcoin.lib)
 
+ELSE()
+ target_link_libraries(crosschain_privatekey_management_exe PRIVATE crosschain_privatekey_management ${Boost_LIBRARIES}
+                                                            $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a
+                                                            $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a
+								)
+
+ENDIF()
+
+target_include_directories(crosschain_privatekey_management_exe PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include  $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/secp256k1/include  $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libbitcoin/include PRIVATE ${BOOST_ROOT}/)
 
 if (USE_PCH)
   set_target_properties(crosschain_privatekey_management PROPERTIES COTIRE_ADD_UNITY_BUILD FALSE)
