--- a/programs/build_helpers/CMakeLists.txt
+++ b/programs/build_helpers/CMakeLists.txt
@@ -13,5 +13,5 @@ if( UNIX AND NOT APPLE )
 endif()
 
 # we only actually need Boost, but link against FC for now so we don't duplicate it.
-target_link_libraries( member_enumerator PRIVATE fc graphene_app graphene_net graphene_chain graphene_egenesis_brief graphene_utilities graphene_wallet ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+target_link_libraries( member_enumerator PRIVATE fc graphene_app graphene_net graphene_chain graphene_egenesis_brief graphene_utilities graphene_wallet crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a  $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
 
