--- a/programs/genesis_util/CMakeLists.txt
+++ b/programs/genesis_util/CMakeLists.txt
@@ -5,7 +5,7 @@ if( UNIX AND NOT APPLE )
 endif()
 
 target_link_libraries( genesis_update
-                       PRIVATE graphene_app graphene_chain graphene_egenesis_none fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+                       PRIVATE graphene_app graphene_chain graphene_egenesis_none fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a  ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS})
 
 install( TARGETS
    genesis_update
@@ -18,7 +18,7 @@ install( TARGETS
 add_executable( get_dev_key get_dev_key.cpp )
 
 target_link_libraries( get_dev_key
-                       PRIVATE graphene_app graphene_chain graphene_egenesis_none graphene_utilities fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+                       PRIVATE graphene_app graphene_chain graphene_egenesis_none graphene_utilities fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
 
 install( TARGETS
    get_dev_key
@@ -31,4 +31,4 @@ install( TARGETS
 add_executable( convert_address convert_address.cpp )
 
 target_link_libraries( convert_address
-                       PRIVATE graphene_chain fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+                       PRIVATE graphene_chain fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
