--- a/programs/size_checker/CMakeLists.txt
+++ b/programs/size_checker/CMakeLists.txt
@@ -2,9 +2,13 @@ add_executable( size_checker main.cpp )
 if( UNIX AND NOT APPLE )
   set(rt_library rt )
 endif()
-
+IF(WIN32)
+ target_link_libraries( size_checker  PRIVATE graphene_chain graphene_egenesis_none fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ELSE()
 target_link_libraries( size_checker
                        PRIVATE graphene_chain graphene_egenesis_none fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ENDIF()
+
 
 install( TARGETS
    size_checker
