--- a/programs/witness_node/CMakeLists.txt
+++ b/programs/witness_node/CMakeLists.txt
@@ -10,8 +10,13 @@ if( GPERFTOOLS_FOUND )
 endif()
 
 # We have to link against graphene_debug_witness because deficiency in our API infrastructure doesn't allow plugins to be fully abstracted #246
+IF(WIN32)
+target_link_libraries( witness_node	  PRIVATE graphene_app graphene_account_history graphene_market_history graphene_witness graphene_chain graphene_debug_witness graphene_transaction graphene_egenesis_full fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ELSE()
 target_link_libraries( witness_node
                        PRIVATE graphene_app graphene_account_history graphene_market_history graphene_witness graphene_chain graphene_debug_witness graphene_transaction graphene_egenesis_full fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ENDIF()
+
 
 install( TARGETS
    witness_node
