--- a/programs/delayed_node/CMakeLists.txt
+++ b/programs/delayed_node/CMakeLists.txt
@@ -8,9 +8,14 @@ if( GPERFTOOLS_FOUND )
     message( STATUS "Found gperftools; compiling delayed_node with TCMalloc")
     list( APPEND PLATFORM_SPECIFIC_LIBS tcmalloc )
 endif()
-
+IF(WIN32)
+ELSE()
+target_link_libraries( delayed_node		 
+						PRIVATE graphene_app graphene_account_history graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
 target_link_libraries( delayed_node
                        PRIVATE graphene_app graphene_account_history graphene_market_history graphene_delayed_node graphene_chain graphene_egenesis_full fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+
+ENDIF()
 
 install( TARGETS
    delayed_node
