--- a/programs/genesis_util/CMakeLists.txt
+++ b/programs/genesis_util/CMakeLists.txt
@@ -3,9 +3,13 @@ add_executable( genesis_update genesis_update.cpp )
 if( UNIX AND NOT APPLE )
   set(rt_library rt )
 endif()
-
+IF(WIN32)
+target_link_libraries( genesis_update PRIVATE graphene_app graphene_chain graphene_egenesis_none fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ELSE()
 target_link_libraries( genesis_update
                        PRIVATE graphene_app graphene_chain graphene_egenesis_none fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a  ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS})
+ENDIF()
+
 
 install( TARGETS
    genesis_update
@@ -17,8 +21,13 @@ install( TARGETS
 
 add_executable( get_dev_key get_dev_key.cpp )
 
+IF(WIN32)
+ target_link_libraries( get_dev_key	PRIVATE graphene_app graphene_chain graphene_egenesis_none graphene_utilities fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ELSE()
 target_link_libraries( get_dev_key
                        PRIVATE graphene_app graphene_chain graphene_egenesis_none graphene_utilities fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ENDIF()
+
 
 install( TARGETS
    get_dev_key
@@ -29,6 +38,10 @@ install( TARGETS
 )
 
 add_executable( convert_address convert_address.cpp )
-
+IF(WIN32)
+target_link_libraries( convert_address	 PRIVATE graphene_chain fc ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ELSE()
 target_link_libraries( convert_address
                        PRIVATE graphene_chain fc crosschain_privatekey_management $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a $ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a ${CMAKE_DL_LIBS} ${PLATFORM_SPECIFIC_LIBS} )
+ENDIF()
+
