--- a/libraries/app/CMakeLists.txt
+++ b/libraries/app/CMakeLists.txt
@@ -15,7 +15,8 @@ add_library( graphene_app
 target_link_libraries( graphene_app graphene_market_history graphene_account_history graphene_transaction graphene_chain fc graphene_db graphene_net graphene_utilities graphene_debug_witness crosschain_privatekey_management)
 target_include_directories( graphene_app
                             PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
-                            "${CMAKE_CURRENT_SOURCE_DIR}/../egenesis/include" )
+                            "${CMAKE_CURRENT_SOURCE_DIR}/../egenesis/include"
+			    "${CMAKE_CURRENT_SOURCE_DIR}/../plugins/witness/include" )
 
 if(MSVC)
   set_source_files_properties( application.cpp api.cpp database_api.cpp PROPERTIES COMPILE_FLAGS "/bigobj" )
