--- a/libraries/crosschain/CMakeLists.txt
+++ b/libraries/crosschain/CMakeLists.txt
@@ -15,6 +15,7 @@ set(sources
    crosschain_interface_btc.cpp
    crosschain_interface_ltc.cpp
    crosschain_interface_ub.cpp
+   crosschain_interface_hc.cpp
    crosschain_transaction_record_plugin.cpp
    ${HEADERS})
 
