capability for MACOS

--- a/libraries/egenesis/CMakeLists.txt
+++ b/libraries/egenesis/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable( embed_genesis
 IF(WIN32)
 target_link_libraries( embed_genesis graphene_chain graphene_app graphene_egenesis_none fc )
 ELSE()
-target_link_libraries( embed_genesis  graphene_chain graphene_app graphene_egenesis_none fc crosschain_privatekey_management "$ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a" "$ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a")
+target_link_libraries( embed_genesis  graphene_chain graphene_app graphene_witness graphene_egenesis_none fc crosschain_privatekey_management "$ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a" "$ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a")
 ENDIF()
 
 set( embed_genesis_args
