change for eth & erc

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -17,6 +17,7 @@ if( GRAPHENE_DISABLE_UNITY_BUILD )
 	db_crosschain_trx.cpp
 	db_coldhot_trx.cpp
 	db_pay_back.cpp
+	db_eths_trx.cpp
       )
    message( STATUS "Graphene database unity build disabled" )
 else( GRAPHENE_DISABLE_UNITY_BUILD )
@@ -56,7 +57,8 @@ add_library( graphene_chain
              protocol/fee_schedule.cpp
              protocol/confidential.cpp
              protocol/vote.cpp
-
+			eth_seri_record_evaluate.cpp
+			eth_seri_record.cpp
              genesis_state.cpp
              get_config.cpp
 	     pts_address.cpp
