--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ list( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules" )
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 set(GRAPHENE_EGENESIS_JSON "${CMAKE_CURRENT_SOURCE_DIR}/genesis.json" )
+set(TESTNET_GRAPHENE_EGENESIS_JSON "${CMAKE_CURRENT_SOURCE_DIR}/testnet_genesis.json" )
 
 #set (ENABLE_INSTALLER 1)
 #set (USE_PCH 1)
