Revert "create and contain testnet genesis info in building"
This reverts commit 91d3225902a4720a77da09ccad4de7cb8cc07941.

--- a/libraries/egenesis/CMakeLists.txt
+++ b/libraries/egenesis/CMakeLists.txt
@@ -12,9 +12,9 @@ add_executable( embed_genesis
    embed_genesis.cpp
    )
 IF(WIN32)
-target_link_libraries( embed_genesis graphene_chain  graphene_egenesis_none fc )
+target_link_libraries( embed_genesis graphene_chain graphene_app graphene_egenesis_none fc )
 ELSE()
-target_link_libraries( embed_genesis  graphene_chain  graphene_witness graphene_egenesis_none fc crosschain_privatekey_management "$ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a" "$ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a" $ENV{ETH_CROSSCHAIN_PROJECT}/eth_sign/libeth_sign.a  $ENV{ETH_CROSSCHAIN_PROJECT}/eth_sign/cryptopp/libcryptopp.a)
+target_link_libraries( embed_genesis  graphene_chain graphene_app graphene_witness graphene_egenesis_none fc crosschain_privatekey_management "$ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin.a" "$ENV{CROSSCHAIN_PRIVATEKEY_PROJECT}/libblocklink_libbitcoin_secp256k1.a" $ENV{ETH_CROSSCHAIN_PROJECT}/eth_sign/libeth_sign.a  $ENV{ETH_CROSSCHAIN_PROJECT}/eth_sign/cryptopp/libcryptopp.a)
 ENDIF()
 
 set( embed_genesis_args
@@ -25,7 +25,7 @@ set( embed_genesis_args
 MESSAGE( STATUS "egenesis: " ${GRAPHENE_EGENESIS_JSON} )
 
 if( GRAPHENE_EGENESIS_JSON )
-   list( APPEND embed_genesis_args --genesis-json "${GRAPHENE_EGENESIS_JSON}" --testnet-genesis-json "${TESTNET_GRAPHENE_EGENESIS_JSON}")
+   list( APPEND embed_genesis_args --genesis-json "${GRAPHENE_EGENESIS_JSON}" )
 endif( GRAPHENE_EGENESIS_JSON )
 
 MESSAGE( STATUS "embed_genesis_args: " ${embed_genesis_args} )
@@ -38,7 +38,6 @@ add_custom_command(
    COMMAND embed_genesis ${embed_genesis_args}
    DEPENDS
       "${GRAPHENE_EGENESIS_JSON}"
-      "${TESTNET_GRAPHENE_EGENESIS_JSON}"
       "${CMAKE_CURRENT_SOURCE_DIR}/egenesis_brief.cpp.tmpl"
       "${CMAKE_CURRENT_SOURCE_DIR}/egenesis_full.cpp.tmpl"
       embed_genesis )
