update code to build on newer gcc version

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,86 @@ __pycache__/
 *.rej
 /2017bin
 /eth_test
+
+# tmp files in linux
+/tests/CMakeFiles/
+/tests/Makefile
+/tests/app_test
+/tests/chain_bench
+/tests/chain_test
+/tests/cmake_install.cmake
+/tests/generate_empty_blocks/CMakeFiles/
+/tests/generate_empty_blocks/Makefile
+/tests/generate_empty_blocks/cmake_install.cmake
+/tests/generate_empty_blocks/generate_empty_blocks
+/tests/intense_test
+/tests/performance_test
+/programs/cli_wallet/cmake_install.cmake
+/programs/cmake_install.cmake
+/programs/debug_node/CMakeFiles/
+/programs/debug_node/Makefile
+/programs/debug_node/cmake_install.cmake
+/programs/debug_node/debug_node
+/programs/delayed_node/CMakeFiles/
+/programs/delayed_node/Makefile
+/programs/delayed_node/cmake_install.cmake
+/programs/delayed_node/delayed_node
+/programs/genesis_util/CMakeFiles/
+/programs/genesis_util/Makefile
+/programs/genesis_util/cmake_install.cmake
+/programs/genesis_util/convert_address
+/programs/genesis_util/genesis_update
+/programs/genesis_util/get_dev_key
+/programs/js_operation_serializer/CMakeFiles/
+/programs/js_operation_serializer/Makefile
+/programs/js_operation_serializer/cmake_install.cmake
+/programs/js_operation_serializer/js_operation_serializer
+/programs/size_checker/CMakeFiles/
+/programs/size_checker/Makefile
+/programs/size_checker/cmake_install.cmake
+/programs/size_checker/size_checker
+/programs/witness_node/CMakeFiles/
+/programs/witness_node/Makefile
+/programs/witness_node/cmake_install.cmake
+/programs/witness_node/witness_node
+/CMakeFiles/
+/Makefile
+/cmake_install.cmake
+/compile_commands.json
+/libraries/CMakeFiles/
+/libraries/Makefile
+/libraries/app/CMakeFiles/
+/libraries/app/Makefile
+/libraries/app/cmake_install.cmake
+/libraries/app/libgraphene_app.a
+/libraries/chain/CMakeFiles/
+/libraries/chain/Makefile
+/libraries/chain/cmake_install.cmake
+/libraries/chain/stOMCQBz
+/libraries/cmake_install.cmake
+/libraries/crosschain/CMakeFiles/
+/libraries/crosschain/Makefile
+/libraries/crosschain/cmake_install.cmake
+/libraries/crosschain/git_revision.cpp
+/libraries/crosschain/libcrosschain.a
+/libraries/crosschain_privatekey_management/CMakeFiles/
+/libraries/crosschain_privatekey_management/Makefile
+/libraries/crosschain_privatekey_management/cmake_install.cmake
+/libraries/crosschain_privatekey_management/crosschain_privatekey_management_exe
+/libraries/crosschain_privatekey_management/libcrosschain_privatekey_management.a
+/libraries/db/CMakeFiles/
+/libraries/db/Makefile
+/libraries/db/cmake_install.cmake
+/libraries/db/libgraphene_db.a
+/libraries/deterministic_openssl_rand/CMakeFiles/
+/libraries/deterministic_openssl_rand/Makefile
+/libraries/deterministic_openssl_rand/cmake_install.cmake
+/libraries/deterministic_openssl_rand/libdeterministic_openssl_rand.a
+/libraries/egenesis/CMakeFiles/
+/libraries/egenesis/Makefile
+/libraries/egenesis/cmake_install.cmake
+/libraries/egenesis/embed_genesis
+/libraries/egenesis/libgraphene_egenesis_brief.a
+/libraries/egenesis/libgraphene_egenesis_full.a
+/libraries/egenesis/libgraphene_egenesis_none.a
+
