--- a/.gitignore
+++ b/.gitignore
@@ -349,4 +349,70 @@ __pycache__/
 /libraries/egenesis/libgraphene_egenesis_brief.a
 /libraries/egenesis/libgraphene_egenesis_full.a
 /libraries/egenesis/libgraphene_egenesis_none.a
+/libraries/chain/libgraphene_chain.a
+/libraries/fc/CMakeFiles/
+/libraries/fc/Makefile
+/libraries/fc/cmake_install.cmake
+/libraries/fc/git_revision.cpp
+/libraries/fc/libfc.a
+/libraries/fc/vendor/secp256k1-zkp/src/project_secp256k1-build/
+/libraries/fc/vendor/secp256k1-zkp/src/project_secp256k1-stamp/
+/libraries/fc/vendor/secp256k1-zkp/tmp/
+/libraries/fc/vendor/websocketpp/CMakeFiles/
+/libraries/fc/vendor/websocketpp/Makefile
+/libraries/fc/vendor/websocketpp/cmake_install.cmake
+/libraries/fc/vendor/websocketpp/websocketpp/CMakeFiles/
+/libraries/fc/vendor/websocketpp/websocketpp/Makefile
+/libraries/fc/vendor/websocketpp/websocketpp/cmake_install.cmake
+/libraries/net/CMakeFiles/
+/libraries/net/Makefile
+/libraries/net/cmake_install.cmake
+/libraries/net/libgraphene_net.a
+/libraries/plugins/CMakeFiles/
+/libraries/plugins/Makefile
+/libraries/plugins/account_history/CMakeFiles/
+/libraries/plugins/account_history/Makefile
+/libraries/plugins/account_history/cmake_install.cmake
+/libraries/plugins/account_history/libgraphene_account_history.a
+/libraries/plugins/cmake_install.cmake
+/libraries/plugins/debug_witness/CMakeFiles/
+/libraries/plugins/debug_witness/Makefile
+/libraries/plugins/debug_witness/cmake_install.cmake
+/libraries/plugins/debug_witness/libgraphene_debug_witness.a
+/libraries/plugins/delayed_node/CMakeFiles/
+/libraries/plugins/delayed_node/Makefile
+/libraries/plugins/delayed_node/cmake_install.cmake
+/libraries/plugins/delayed_node/libgraphene_delayed_node.a
+/libraries/plugins/market_history/CMakeFiles/
+/libraries/plugins/market_history/Makefile
+/libraries/plugins/market_history/cmake_install.cmake
+/libraries/plugins/market_history/libgraphene_market_history.a
+/libraries/plugins/transaction/CMakeFiles/
+/libraries/plugins/transaction/Makefile
+/libraries/plugins/transaction/cmake_install.cmake
+/libraries/plugins/transaction/libgraphene_transaction.a
+/libraries/plugins/witness/CMakeFiles/
+/libraries/plugins/witness/Makefile
+/libraries/plugins/witness/cmake_install.cmake
+/libraries/plugins/witness/libgraphene_witness.a
+/libraries/utilities/CMakeFiles/
+/libraries/utilities/Makefile
+/libraries/utilities/cmake_install.cmake
+/libraries/utilities/git_revision.cpp
+/libraries/utilities/libgraphene_utilities.a
+/libraries/wallet/CMakeFiles/
+/libraries/wallet/Makefile
+/libraries/wallet/api_documentation.cpp
+/libraries/wallet/cmake_install.cmake
+/libraries/wallet/libgraphene_wallet.a
+/programs/CMakeFiles/
+/programs/Makefile
+/programs/build_helpers/CMakeFiles/
+/programs/build_helpers/Makefile
+/programs/build_helpers/cat-parts
+/programs/build_helpers/cmake_install.cmake
+/programs/build_helpers/member_enumerator
+/programs/cli_wallet/CMakeFiles/
+/programs/cli_wallet/Makefile
+/programs/cli_wallet/cli_wallet
 
